第六章结束

--- a/Frontend/src/app/app.html
+++ b/Frontend/src/app/app.html
@@ -1,2 +1,8 @@
 <app-nav />
-<app-home />
+
+<div
+  [class.mt-24]="router.url !== '/'"
+  [class.container]="router.url !== '/'"
+  [class.mx-auto]="router.url !== '/'">
+  <router-outlet />
+</div>
